[package]
name = "jakt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pico-args = { version = "0.5.0", features = ["combined-flags"] }

[dev-dependencies]
uuid = {version = "1.0.0", features=["v4"]}
lazy_static = "1.4.0"

[features]
default = []
trace = []
